--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ script:
  - echo 'Verify program(s) used by this repo'
  - docker run -t --rm nf-sge fastqc --help
  - docker run -t --rm nf-sge multiqc --help
- - docker run -t --rm nf-sge SeqPrep --help
- - docker run -t --rm nf-sge needleall --help
+ - docker run -t --rm nf-sge SeqPrep -h
+ - docker run -t --rm nf-sge needleall -help
+ - docker run -t --rm nf-sge seqkit --help 
